# StudentCheck

./: .replit  README.md  pyproject.toml
app/: __init__.py  auth.py  schools.csv  sv.py  utils.py
app/static/: script.js  style.css
app/templates/: base.html
app/templates/auth/: login.html
app/templates/main/: index.html
