[tool.poetry]
name = "repl_python3_studentvueui"
version = "0.1.0"
description = ""
authors = ["Zorran <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
pandas = "^1.3.4"
studentvue = "^2.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
